common-applications/control/jenkins/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
