common-applications/control/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      # We pinned NodePort to fix number in order to used NodePort service
      nodePort: 32719
    - name: jnlp
      port: 50000
      targetPort: 50000
      # We pinned NodePort to fix number in order to used NodePort service
      nodePort: 32718
  loadBalancerSourceRanges:
  type: NodePort
